# LogiLCDStudio

./: CMakeLists.txt  ColourThread.cpp  DataFunctions.cpp  DataFunctions.h  DualThread.cpp  LCDThreads.h  LogiLCD.cpp  LogiLCD.sln  LogiLCD.vcxproj  LogiLCD.vcxproj.filters  MonoThread.cpp  README.md  mono_background.h
